# CaPSLOC-Project

./: .gitignore  13.08.25  README.md  Test.md  Test.sln
ALT/: .cproject  .gitignore  .project  main.cpp  test_script.xml
ALT/raspicam/: CMakeLists.txt  simpletest_raspicam.cpp
CTRL/: .gitignore  CaPSLOC.sln
GPSManager/: FloatAverage.cpp  GGA.cpp  GPSManager-Debug.vgdbsettings  GPSManager-Release.vgdbsettings  GPSManager.cpp  GPSManager.h  GPSManager.vcxproj  GPSManager.vcxproj.filters  Makefile  Makefile.old  NSS.cpp  NSS.h
MCPM/: MCPM-Debug.vgdbsettings  MCPM-Release.vgdbsettings  MCPM.cpp  MCPM.h  MCPM.vcxproj  MCPM.vcxproj.filters  Makefile  debug.mak.old
PICManager/: HorizontalAxis.cpp  HorizontalAxis.h  Makefile  Makefile.old  PICManager-Debug.vgdbsettings  PICManager.vcxproj  PICManager.vcxproj.filters  PicManager.cpp  PicManager.h  VerticalAxis.cpp  VerticalAxis.h  debug.mak.old  gcc_Debug.h
Sensors/: GPS.cpp  GPS.h  L3GD20.cpp  L3GD20.h  LPS331AP.cpp  LPS331AP.h  LSM303.h  Makefile  Makefile.old  SensorManager.cpp  SensorManager.h  Sensors-Debug.vgdbsettings  Sensors.vcxproj  Sensors.vcxproj.filters  debug.mak.old  gcc_Debug.h  gcc_Release.h
Spring 2013 Files/: ACPS High Level.vsd
Spring 2013 Research/: ACPS System.vsd  AndroidEnabledProgrammableCameraPositioningSystem.docx  Improvement List.txt
Test/: Makefile  Makefile.old  Source.cpp  Test-Debug.vgdbsettings  Test-Release.vgdbsettings  Test.vcxproj  Test.vcxproj.filters  debug.mak.old  gcc_Debug.h  release.mak
WiringPi/: Makefile  Makefile.old  WiringPi-Debug.vgdbsettings  WiringPi.vcxproj  (+11 more)
(+170 files in other folders)
